Oh look, colors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,12 +30,14 @@ bevy = { version = "0.8", default-features = false, features = [
 bevy_kira_audio = { version = "0.12" }
 bevy_asset_loader = { version = "0.12" }
 rand = { version = "0.8.3" }
+bevy_prototype_lyon = "0.6.0"
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.26.0", default-features = false }
 image = { version = "0.24", default-features = false }
 
 bevy_editor_pls = { version = "0.1.1", optional = true }
+bevy_turborand = "0.3.0"
 
 [build-dependencies]
 embed-resource = "1.4"
