--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ lto = true
 codegen-units = 1
 
 [features]
-dev = ["bevy/dynamic", "bevy_editor_pls"]
+dev = ["bevy/dynamic", "bevy_editor_pls", "bevy_mod_picking/debug"]
 
 [dependencies]
 bevy = { version = "0.8", default-features = false, features = [
@@ -38,6 +38,7 @@ image = { version = "0.24", default-features = false }
 
 bevy_editor_pls = { version = "0.1.1", optional = true }
 bevy_turborand = "0.3.0"
+bevy_mod_picking = { version = "0.9.0", features = ["2d"] }
 
 [build-dependencies]
 embed-resource = "1.4"
